[gd_scene load_steps=4 format=3 uid="uid://d0b6qnwb2sxic"]

[ext_resource type="PackedScene" uid="uid://d2fcgdlk7t8wq" path="res://Scenes/Objects/interactable_object.tscn" id="1_cxgrk"]
[ext_resource type="Texture2D" uid="uid://dk5th730dgw13" path="res://Sprites/Objects/thing3.png" id="2_notkq"]
[ext_resource type="Script" path="res://Scenes/Characters/thing.gd" id="2_xa7xd"]

[node name="Thing" instance=ExtResource("1_cxgrk")]
script = ExtResource("2_xa7xd")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0, -13)
texture = ExtResource("2_notkq")

[node name="BlinkTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="EndBlink" type="Timer" parent="." index="3"]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="EndBlink" to="." method="disable_blinking"]
